--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="hero is-fullheight is-dark header-image">
-      <div class="hero-head darken-30">
-        <header class="navbar">
+      <div class="hero-head">
+        <header class="navbar is-fixed-top darken-30">
           <div class="container">
             <div class="navbar-brand">
               <a class="navbar-item fancy is-size-4">
@@ -43,6 +43,15 @@
                 </a>
                 <a class="navbar-item" href="#rsvp">
                   RSVP
+                </a>
+                <a class="navbar-item" href="index.html">
+                  <img src="https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg" alt="English" width="24" height="18">
+                </a>
+                <a class="navbar-item" href="fr.html">
+                  <img src="https://lipis.github.io/flag-icon-css/flags/4x3/fr.svg" alt="French" width="24" height="18">
+                </a>
+                <a class="navbar-item" href="is.html">
+                  <img src="https://lipis.github.io/flag-icon-css/flags/4x3/is.svg" alt="Icelandic" width="24" height="18">
                 </a>
               </div>
             </div>
@@ -140,13 +149,17 @@
       </div>
     </section>
     <section class="section hero is-fullheight is-success castle-image" id="venue">
-      <div class="container is-fluid">
-        <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop has-text-centered">
-            <h2 class="title is-1 fancy">Venue</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2757.9223269231056!2d6.397625815870075!3d46.27164787911878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c14bd0de48fbd%3A0x460d4742dc1d4e52!2sCh%C3%A2teau%20Saint%20Michel%20Avully!5e0!3m2!1sen!2sis!4v1571779764309!5m2!1sen!2sis" class="map" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <div class="hero-head">
+        <div class="container is-fluid">
+          <div class="columns">
+            <div class="column is-8-desktop is-offset-2-desktop has-text-centered">
+              <h2 class="title is-1 fancy">Venue</h2>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="hero-body"></div>
+      <div class="hero-foot">
         <div class="columns">
           <div class="column is-half is-offset-one-quarter">
             <div class="card">
@@ -251,110 +264,60 @@
           </div>
           <div class="column">
             <h3 class="title is-3">Nearby</h3>
-            <h4 class="title is-4">Guesthouse Le bonheur du lac (14 km away)</h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  Address:<br>
-                  <br>
-                  To book:<br>
-                  Phone:<br>
-                </strong>
+            <h4 class="title is-4">Hotel Ibis budget Thonon-les-Bains (13 km away)</h4>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>Address:</strong>
               </div>
-              <div class="column has-text-left">
-                  Excenevex<br>
-                  Can welcome 15 people.<br>
-                  <a href="http://www.aubonheurdulac.com">http://www.aubonheurdulac.com</a><br>
-                  <a href="tel:+33 6 76 35 25 53">+33 6 76 35 25 53</a>
+              <div class="column is-half has-text-left">
+                La Grangette, Avenue de la Grangette, 74200 Thonon-les-Bains
               </div>
             </div>
-            <h4 class="title is-4">Mme MARTINERIE Gites de France (10 km away) </h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  Address:<br>
-                  <br>
-                  To book:<br>
-                  Phone:<br>
-                </strong>
-              </div>
-              <div class="column has-text-left">
-                  20 chemin des Sources La Basse 74550 ORCIER<br>
-                  Can welcome 15 people.<br>
-                  <a href="http://www.alabasse.com">http://www.alabasse.com</a><br>
-                  <a href="tel:+33 6 03 92 15 48">+33 6 03 92 15 48</a>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right"></div>
+              <div class="column is-half has-text-left">
+                85 rooms available
               </div>
             </div>
-              <h4 class="title is-4">THONON LES BAINS CAMPING St Disdille (14 km away)</h4>
-              <div class="columns is-mobile">
-                <div class="column has-text-right">
-                  <strong>
-                    Address:<br>
-                    <br>
-                    To book:<br>
-                    Phone:<br>
-                  </strong>
-                </div>
-                <div class="column has-text-left">
-                    74200 Thonon-les-Bains, France<br>
-                    Bungalow for rent<br>
-                    <a href="https://www.disdille.com">https://www.disdille.com</a><br>
-                    <a href="tel:+33 4 50 71 14 11">+33 4 50 71 14 11</a>
-                </div>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>To book:</strong>
               </div>
-              <h4 class="title is-4">Ibis budget Thonon Les Bains (nice hotel)</h4>
-              <div class="columns is-mobile">
-                <div class="column has-text-right">
-                  <strong>
-                    To book:<br>
-                  </strong>
-                </div>
-                <div class="column has-text-left">
-                    <a href="http://www.aubonheurdulac.com">http://www.aubonheurdulac.com</a>
-                </div>
-              </div>
-            <h4 class="title is-4">ibis Thonon Centre (nice hotel)</h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  To book:<br>
-                </strong>
-              </div>
-              <div class="column has-text-left">
-                  <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Book</a><br>
+              <div class="column is-half has-text-left">
+                <a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
               </div>
             </div>
-            <h4 class="title is-4">B&B Hotel ANNEMASSE Saint-Cergues</h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  To book:<br>
-                </strong>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>Phone:</strong>
               </div>
-              <div class="column has-text-left">
-                  <a href="https://www.booking.com/hotel/fr/b-b-annemasse-saint-cergues.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=375618601_120265726_0_0_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=10;highlighted_blocks=375618601_120265726_0_0_0;hpos=10;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Book now</a><br>
+              <div class="column is-half has-text-left">
+                <a href="tel:+33 892 70 03 17">+33 892 70 03 17</a>
               </div>
             </div>
-            <h4 class="title is-4">Résidence Les Baladines</h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  To book:<br>
-                </strong>
+            <h4 class="title is-4">Hotel Ibis Thonon Centre (15 km away)</h4>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>Address:</strong>
               </div>
-              <div class="column has-text-left">
-                  <a href="https://www.booking.com/hotel/fr/residence-les-baladines.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=26359202_101758016_0_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=21;highlighted_blocks=26359202_101758016_0_2_0;hpos=21;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Book this hotel</a><br>
+              <div class="column is-half has-text-left">
+                2, Ter Avenue d'Evian, 74200 Thonon-les-Bains
               </div>
             </div>
-            <h4 class="title is-4">La Fontaine d'Argence</h4>
-            <div class="columns is-mobile">
-              <div class="column has-text-right">
-                <strong>
-                  To book:<br>
-                </strong>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>To book:</strong>
               </div>
-              <div class="column has-text-left">
-                  <a href="https://www.booking.com/hotel/fr/la-fontaine-d-39-argence.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=378014504_213245384_2_1_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=3;highlighted_blocks=378014504_213245384_2_1_0;hpos=3;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;sr_order=distance_from_search;srepoch=1570478977;srpvid=359f8dc0fba80009;type=total;ucfs=1&#hotelTmpl">Reserve instantly</a><br>
+              <div class="column is-half has-text-left">
+                <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
+              </div>
+            </div>
+            <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right">
+                <strong>Phone:</strong>
+              </div>
+              <div class="column is-half has-text-left">
+                <a href="tel:+33 4 50 71 24 24">+33 4 50 71 24 24</a>
               </div>
             </div>
           </div>
@@ -403,6 +366,17 @@
         </div>
       </div>
     </section>
+    <section class="section hero is-fullheight" id="contact-us">
+      <div class="hero-head">
+        <h2 class="title is-1 fancy has-text-centered">Contact Us</h2>
+      </div>
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          If you have any questions, please don't hesitate to send us an e-mail at <a href="mailto:emiliesiggi@gmail.com">emiliesiggi@gmail.com</a>.<br>
+          If it's urgent, you can call <a href="tel:+3548460981">Emilie</a> or <a href="tel:+3548673573">Siggi</a>.
+        </div>
+      </div>
+    </section>
     <footer class="footer has-text-centered">
       <div class="container">
          <div class="columns">
@@ -436,12 +410,6 @@
               <small>
                 brunch by Eucalyp from the Noun Project
               </small>
-            </p>
-            
-            <p style="margin-top: 1rem;">
-              <a href="http://bulma.io">
-                <img src="made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
-              </a>
             </p>
           </div>
         </div>
