Added french version

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <strong>To book:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
+                <a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
@@ -391,7 +391,7 @@
                 <strong>To book:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.fr.html?aid=304142;label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
+                <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
@@ -439,7 +439,7 @@
       <div class="container is-fluid">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
-            <h2 class="title is-1 fancy has-text-centered">RSVP</h2>
+            <h2 class="title is-1 fancy has-text-centered">RSVP before January 15th</h2>
           </div>
         </div>
         <div class="columns has-text-centered">
