Touching up on some text details

--- a/fr.html
+++ b/fr.html
@@ -80,14 +80,14 @@
     </section>
     <section class="section hero has-background-white-ter">
       <div class="hero-head">
-        <h2 class="title fancy is-1 has-text-centered">Bienvenue sur le site web de notre mariage.&nbsp;</h2>
-        <h3 class="subtitle fancy is-2 has-text-centered">On a hâte de célébrer ce jour unique avec vous.&nbsp;</h3>
+        <h2 class="title fancy is-1 has-text-centered">Bienvenue sur le site web de notre mariage</h2>
+        <h3 class="subtitle fancy is-2 has-text-centered">On a hâte de célébrer ce jour unique avec vous</h3>
       </div>
       <div class="hero-body">
         <div class="content">
           <div class="columns is-centered">
             <div class="column is-6-desktop is-size-5">
-              <p>Nous avons créé ce site internet pour partager toutes les infos du mariage de manière claire et pratique.&nbsp;</p>
+              <p>Nous avons créé ce site internet pour partager toutes les infos du mariage de manière claire et pratique.</p>
 
               <p>Sur le site, vous pouvez également en savoir plus sur notre rencontre mais également découvrir la liste de cadeau de mariage.</p>
 
@@ -383,7 +383,7 @@
       <div class="hero-body">
         <div class="container is-fluid">
           <div class="columns is-centered">
-            <div class="column is-6-desktop">
+            <div class="column is-6-desktop content">
               <h3 class="title is-3">Votre présence est notre cadeau le plus précieux !</h3>
               <p class="is-size-5">Puisque nous célébrons notre mariage loin de chez nous, nous n'avons pas de place dans les valises (nous voulons aussi vivre avec moins de choses en général)</p>
               <p class="is-size-5">Cependant, si vous voulez nous donner quelque chose, vous pouvez nous aider à financer le mariage en faisant un don dans notre boîte de collecte au mariage.</p>
@@ -414,7 +414,7 @@
         <h2 class="title is-1 fancy has-text-centered">Nous contacter</h2>
       </div>
       <div class="hero-body">
-        <div class="container has-text-centered">Si vous avez des questions, n'hésitez pas à nous envoyer un email à&nbsp;<a href="mailto:emiliesiggi@gmail.com">emiliesiggi@gmail.com</a>.<br>Si c'est urgent, merci de donner un coup de téléphone&nbsp;<a href="tel:+3548460981">Emilie</a> (<a href="tel:+33675202936">ou sur son téléphone français</a>) ou à&nbsp;<a href="tel:+3548673573">Siggi</a>.
+        <div class="container has-text-centered">Si vous avez des questions, n'hésitez pas à nous envoyer un email à&nbsp;<a href="mailto:emiliesiggi@gmail.com">emiliesiggi@gmail.com</a>.<br>Si c'est urgent, merci de donner un coup de téléphone à&nbsp;<a href="tel:+3548460981">Emilie</a> (<a href="tel:+33675202936">ou sur son téléphone français</a>) ou à&nbsp;<a href="tel:+3548673573">Siggi</a>.
         </div>
       </div>
     </section>
