--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <div class="hero-body">
         <div class="container is-fluid">
           <div class="columns is-centered">
-            <div class="column is-6-desktop">
+            <div class="column is-6-desktop content">
               <h3 class="title is-3">Your presence is our most valuable gift! </h2>
               <p class="is-size-5">
                   Since we're celebrating our wedding far away from home, we don't have the luggage space to bring gifts back home (and we also want to live with less things) .
