--- a/fr.html
+++ b/fr.html
@@ -422,7 +422,7 @@
         </div>
       </div>
     </section>
-    <section class="section hero is-fullheight" id="contact-us">
+    <section class="section hero is-fullheight sky-background" id="contact-us">
       <div class="hero-head">
         <h2 class="title is-1 fancy has-text-centered">Nous contacter</h2>
       </div>
@@ -480,8 +480,7 @@
           </svg>
           
         </div>
-        <div class="container has-text-centered">Si vous avez des questions, n'hésitez pas à nous envoyer un email à&nbsp;<a href="mailto:emiliesiggi@gmail.com">emiliesiggi@gmail.com</a>.<br>Si c'est urgent, merci de donner un coup de téléphone à&nbsp;<a href="tel:+3548460981">Emilie</a> (<a href="tel:+33675202936">ou sur son téléphone français</a>) ou à&nbsp;<a href="tel:+3548673573">Siggi</a>.
-        </div><div class="columns is-centered fullwidth">
+        <div class="columns is-centered fullwidth">
             <div class="column is-half">
               <div class="container box content has-text-centered semitransparent">
                 <h3 class="subtitle">Questions?</h3>
