Reducing fr head text

--- a/fr.html
+++ b/fr.html
@@ -49,15 +49,15 @@
               <div class="navbar-end">
                 <a class="navbar-item" href="#the-couple">Le couple
                 </a>
-                <a class="navbar-item" href="#wedding-details">Programme du mariage&nbsp;</a>
+                <a class="navbar-item" href="#wedding-details">Programme</a>
                 <a class="navbar-item" href="#venue">Lieu</a>
-                <a class="navbar-item" href="#accommodations">Hébergements&nbsp;</a>
-                <a class="navbar-item" href="#gift-list">Cadeau de mariage&nbsp;</a>
+                <a class="navbar-item" href="#accommodations">Hébergements</a>
+                <a class="navbar-item" href="#gift-list">Cadeau de mariage</a>
                 <a class="navbar-item" href="#rsvp">
                   RSVP
                 </a>
                 <a class="navbar-item" href="#contact-us">
-                  Nous contacter
+                  Contact
                 </a>
                 <a class="navbar-item is-hidden-touch" href="index.html">
                   <img src="https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg" alt="English" width="24" height="18">
