--- a/fr.html
+++ b/fr.html
@@ -367,6 +367,11 @@
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
+              <div class="column is-half has-text-right"></div>
+              <div class="column is-half has-text-left">
+                67 chambres sur place</div>
+            </div>
+            <div class="columns no-bottom-margin is-mobile">
               <div class="column is-half has-text-right"><strong>Pour réserver :</strong>
               </div>
               <div class="column is-half has-text-left"><a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.fr.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&amp;#hotelTmpl">Cliquez ici</a></div>
