--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="message-body">
                   <div class="content has-text-left">
-                    <p>On Saturday from 19:00 to midnight kids from 3 to 12 years old will have their own party with a professional babysitter in another room of the castle.</p>
+                    <p>On Saturday from 19:00 to midnight, kids from 3 to 12 years old will have their own party with a professional babysitter in another room of the castle.</p>
                     <p>The party will include
                       <ul>
                         <li>games</li>
