--- a/is.html
+++ b/is.html
@@ -105,7 +105,7 @@
     <section class="section hero has-background-white-ter">
       <div class="hero-head">
         <h2 class="title fancy is-1 has-text-centered">Velkomin á giftingarsíðuna okkar</h2>
-        <h3 class="subtitle fancy is-2 has-text-centered">Við bíðum spennt að fagna deginum okkar með þér!</h2>
+        <h3 class="subtitle fancy is-2 has-text-centered">Við bíðum spennt að fagna sérstaka deginum okkar með þér!</h2>
       </div>
       <div class="hero-body">
         <div class="content">
@@ -115,9 +115,9 @@
 
               <p>Þú getur líka <a href="#the-couple">lesið ástarsöguna okkar</a> og <a href="#gift-list">skoðað gjafalistann okkar</a>.</p>
 
-              <p>Njóttu síðunnar skoðaðu og ekki gleyma að <a href="#rsvp">senda inn svar</a>!</p>
+              <p>Njóttu síðunnar, skoðaðu og ekki gleyma að <a href="#rsvp">senda inn svar</a>!</p>
 
-              <p>Síðast en ekki síst – þakka þér fyrir áframhandandi ást og umhyggju. Við erum mjög spennt með að deila þessum degi með þér og við hlökkum til að dansa út í nóttina með uppáhalds fólkinu okkar!</p>
+              <p>Síðast en ekki síst – þakka þér fyrir áframhaldandi ást og umhyggju. Við erum mjög spennt með að deila þessum degi með þér og við hlökkum til að dansa út í nóttina með uppáhalds fólkinu okkar!</p>
             </div>
           </div>
         </div>
@@ -465,7 +465,7 @@
         </div>
         <div class="columns has-text-centered">
           <div class="column">
-            <iframe id="rsvpiframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfWRipKzsADFkJdy8rdMguaQr4KoGt2DngJDSfiM-s0nSxkKA/viewform?embedded=true" class="rsvp-en" width="640" height="1299" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe id="rsvpiframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfWRipKzsADFkJdy8rdMguaQr4KoGt2DngJDSfiM-s0nSxkKA/viewform?embedded=true" class="rsvp-is" width="640" height="1299" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
         </div>
       </div>
