Updated the date

--- a/fr.html
+++ b/fr.html
@@ -104,7 +104,7 @@
 
               <p>Sur le site, vous pouvez en savoir plus sur notre rencontre mais également découvrir la liste de cadeau de mariage.</p>
 
-              <p>Bonne visite ! N’oubliez pas de nous donner une réponse avant le 15 janvier via le formulaire RSVP.</p>
+              <p>Bonne visite ! N’oubliez pas de nous donner une réponse avant le 15 avril via le formulaire RSVP.</p>
 
               <p>Enfin, merci pour votre soutien. Nous sommes très heureux de partager cette journée avec vous et avons hâte de danser avec vous jusqu'au bout de la nuit !</p>
             </div>
@@ -417,7 +417,7 @@
       <div class="container is-fluid">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
-            <h2 class="title is-1 fancy has-text-centered">RSVP avant le 15 janvier&nbsp;</h2>
+            <h2 class="title is-1 fancy has-text-centered">RSVP avant le 15 avril&nbsp;</h2>
           </div>
         </div>
         <div class="columns has-text-centered">
