--- a/is.html
+++ b/is.html
@@ -460,7 +460,7 @@
       <div class="container is-fluid">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
-            <h2 class="title is-1 fancy has-text-centered">RSVP - Sendu svar fyrir 15. Janúar</h2>
+            <h2 class="title is-1 fancy has-text-centered">RSVP - Sendu svar fyrir 15. Apríl</h2>
           </div>
         </div>
         <div class="columns has-text-centered">
