--- a/fr.html
+++ b/fr.html
@@ -80,7 +80,7 @@
               <h1 class="title is-1 is-spaced is-size-1">
                 Emilie &amp; Siggi
               </h1>
-              <h2 class="subtitle is-2">Se marient le 13 juin 2020</h2>
+              <h2 class="subtitle is-2">Se marient le 12 juin 2021</h2>
             </div>
           </div>
           <div class="columns top-margin">
@@ -145,7 +145,7 @@
           <div class="columns">
             <div class="column is-8-desktop is-offset-2-desktop">
               <h2 class="title is-1 fancy">Programme du mariage</h2>
-              <p><strhttps://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.1/iframeResizer.min.jsong>Quand :</strong>&nbsp;Samedi 13 Juin 2020<br><strong>Lieu :</strong> Château Saint Michel Avully en France<br>
+              <p><strong>Quand :</strong>&nbsp;Samedi 12 Juin 2021<br><strong>Lieu :</strong> Château Saint Michel Avully en France<br>
                 <strong>Dress code :</strong>&nbsp;Vos plus beaux vêtements pour l'occasion !<br>
               </p>
             </div>
@@ -348,7 +348,7 @@
             <div class="columns no-bottom-margin is-mobile">
               <div class="column is-half has-text-right"><strong>Pour réserver :</strong>
               </div>
-              <div class="column is-half has-text-left"><a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.fr.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&amp;#hotelTmpl">Cliquez ici</a></div>
+              <div class="column is-half has-text-left"><a href="http://www.booking.com/Share-t4eOLE">Cliquez ici</a></div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
               <div class="column is-half has-text-right"><strong>Téléphone :</strong>
@@ -374,7 +374,7 @@
             <div class="columns no-bottom-margin is-mobile">
               <div class="column is-half has-text-right"><strong>Pour réserver :</strong>
               </div>
-              <div class="column is-half has-text-left"><a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.fr.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&amp;#hotelTmpl">Cliquez ici</a></div>
+              <div class="column is-half has-text-left"><a href="http://www.booking.com/Share-MgLAI1">Cliquez ici</a></div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
               <div class="column is-half has-text-right">
