--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 Emilie & Siggi
               </h1>
               <h2 class="subtitle is-2">
-                  Are getting married on June 13, 2020
+                  Are getting married on June 12, 2021
               </h2>
             </div>
           </div>
@@ -157,7 +157,7 @@
             <div class="column is-8-desktop is-offset-2-desktop">
               <h2 class="title is-1 fancy">Wedding details</h2>
               <p>
-                <strong>When:</strong> Saturday, June 13, 2020<br>
+                <strong>When:</strong> Saturday, June 12, 2021<br>
                 <strong>Where:</strong> Château Saint Michel Avully, located in France<br>
                 <strong>Dress code:</strong> Pick your finest clothes for the occasion!<br>
               </p>
@@ -379,7 +379,7 @@
                 <strong>To book:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
+                <a href="http://www.booking.com/Share-t4eOLE">Find availability</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
@@ -410,7 +410,7 @@
                 <strong>To book:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Find availability</a>
+                <a href="http://www.booking.com/Share-MgLAI1">Find availability</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
