--- a/is.html
+++ b/is.html
@@ -90,7 +90,7 @@
                 Emilie & Siggi
               </h1>
               <h2 class="subtitle is-2">
-                  Munu gifta sig þann 13. Júní 2020
+                  Munu gifta sig þann 12. Júní 2021
               </h2>
             </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="column is-8-desktop is-offset-2-desktop">
               <h2 class="title is-1 fancy">Brúðkaupsupplýsingar</h2>
               <p>
-                <strong>Hvenær:</strong> Laugardaginn 13. Júní, 2020<br>
+                <strong>Hvenær:</strong> Laugardaginn 12. Júní, 2021<br>
                 <strong>Hvar:</strong> Château Saint Michel Avully, í Frakklandi<br>
                 <strong>Klæðaburður:</strong> Veldu fínustu fötin þín fyrir viðburðinn!<br>
               </p>
@@ -381,7 +381,7 @@
                 <strong>Til að bóka:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-budget-thonon-les-bains.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=57556302_94494428_3_2_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=12;highlighted_blocks=57556302_94494428_3_2_0;hpos=12;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Athuga framboð</a>
+                <a href="http://www.booking.com/Share-t4eOLE">Athuga framboð</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
@@ -412,7 +412,7 @@
                 <strong>Til að bóka:</strong>
               </div>
               <div class="column is-half has-text-left">
-                <a href="https://www.booking.com/hotel/fr/ibis-thonon-evian.html?label=gen173nr-1FCAEoggI46AdIM1gEaHCIAQGYAQ24ARfIAQzYAQHoAQH4AQuIAgGoAgO4AsO17uwFwAIB;sid=be90361658c906caef22831f64119f74;all_sr_blocks=54540501_94489626_0_34_0;checkin=2020-06-13;checkout=2020-06-14;dest_id=-1415001;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=19;highlighted_blocks=54540501_94489626_0_34_0;hpos=19;nflt=oos%3D1%3B;no_rooms=1;room1=A%2CA;sb_price_type=total;spdest=ci%2F-1415001;sr_order=popularity;srepoch=1570478885;srpvid=42bd8d92f6010235;type=total;ucfs=1&#hotelTmpl">Athuga framboð</a>
+                <a href="http://www.booking.com/Share-MgLAI1">Athuga framboð</a>
               </div>
             </div>
             <div class="columns no-bottom-margin is-mobile">
